Fix mobile website text container overflow fix test

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -189,7 +189,8 @@
     height: fit-content;
     margin-bottom: 2rem;
     padding: 0;
-    gap: 2rem;
+    gap: 3rem;
+    flex-direction: column;
   }
   
   .section__pic-container-1 {
@@ -197,13 +198,7 @@
     height: 70vw;
     max-width: 300px;
     max-height: 300px;
-    margin: 0 auto;
-  }
-  
-  .section__pic-container-1 img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    margin: 0 auto 0 auto;
   }
   
   .section__text {
@@ -213,6 +208,20 @@
     max-width: 400px;
     margin: 0 auto;
   }
+  
+  .section__pic-container-1 img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  /* .section__text {
+    padding: 2rem 1.5rem;
+    min-width: auto;
+    width: 85%;
+    max-width: 400px;
+    margin: 0 auto;
+  } */
   
   .section__text__p1 {
     font-size: 1.2rem;
